# registro-notas-alunos

./: .env  .env-sample  .flake8  .gitignore  INSTALACAO.md  LICENSE  MANIFEST.in  README.md  app.py  docker-compose.yml  poetry.toml  pyproject.toml  requirements.txt  update_requirements.py
registro_notas_alunos/: __init__.py  __main__.py
registro_notas_alunos/backend/: __init__.py
registro_notas_alunos/backend/aluno/: __init__.py  model.py  service.py
registro_notas_alunos/backend/disciplina/: __init__.py  model.py  service.py
registro_notas_alunos/backend/lib/: __init__.py  database.py
registro_notas_alunos/backend/matricula/: __init__.py  model.py  service.py
registro_notas_alunos/backend/notas/: __init__.py  model.py  service.py  vo.py
registro_notas_alunos/gui/: main.py
registro_notas_alunos/gui/screens/: exceptions.py  gerenciar_alunos.py  gerenciar_disciplinas.py  gerenciar_matriculas.py  gerenciar_notas.py  relatorio_disciplina.py
registro_notas_alunos/sql/: create_tables.sql  dados.sql
test/backend/: test_matricula_service.py
test/backup/: README.md  conftest.py  test_aluno_service.py  test_coverage.py  test_disciplina_service.py  test_matricula_service.py  test_models.py
tests/: __init__.py
