[tool.poetry]
name = "registro-notas-alunos"
version = "0.1.0"
description = "Sistema de registro de notas de alunos"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "registro_notas_alunos"}]

[tool.poetry.scripts]
registro-notas = "registro_notas_alunos.__main__:main"
start = "registro_notas_alunos.__main__:main"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
isort = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
